[gd_scene load_steps=2 format=3 uid="uid://c4npj6y0q3lhp"]

[ext_resource type="Script" path="res://ui/network_options.gd" id="1_j7gn5"]

[node name="Network" type="VBoxContainer"]
offset_right = 143.0
offset_bottom = 121.0
script = ExtResource("1_j7gn5")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "Network Options"
horizontal_alignment = 1

[node name="DelaySpinBox" type="SpinBox" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
max_value = 30.0
page = 5.0
alignment = 2
prefix = "Delay"
suffix = "Frames"

[node name="DelaySlider" type="HSlider" parent="."]
layout_mode = 2
max_value = 30.0

[node name="JitterCheckButton" type="CheckButton" parent="."]
layout_mode = 2
text = "Enable Jitter"

[node name="JitterChance" type="HSlider" parent="."]
layout_mode = 2
max_value = 0.99
step = 0.01
value = 0.5

[connection signal="value_changed" from="DelaySpinBox" to="." method="_on_delay_spin_box_value_changed"]
[connection signal="value_changed" from="DelaySlider" to="." method="_on_delay_slider_value_changed"]
[connection signal="toggled" from="JitterCheckButton" to="." method="_on_jitter_check_button_toggled"]
[connection signal="value_changed" from="JitterChance" to="." method="_on_jitter_chance_value_changed"]
